# Market-flow

./: .env  .env.example  .gitignore  Cargo.toml  README.md  ROADMAP.md  ROADMAP_PHASE_10-12.md  ROADMAP_V3.md  SPEC_0-12.md  SUMMARY.md  TASKS_list.md  TODO_V3.md  task_list.md
.agents/skills/Market-flow/: SKILL.md
.agents/skills/Market-flow/agents/: openai.yaml
.claude/: ecc-tools.json  identity.json
.claude/homunculus/instincts/inherited/: Market-flow-instincts.yaml
.codex/: AGENTS.md
.github/workflows/: ci.yml
crates/app/: Cargo.toml  build.rs  tauri.conf.json
crates/app/capabilities/: default.json
crates/app/icons/: icon.icns
crates/app/src/: algo_ingest.rs  api.rs  cancel.rs  dto.rs  feed.rs  history.rs  ingest.rs  lib.rs  live.rs  llm.rs  main.rs  replay.rs  settings.rs  state.rs  tauri_app.rs  telemetry.rs  trade.rs
crates/data/: Cargo.toml
crates/data/examples/: algopack_check.rs  live_check.rs
crates/data/src/: auth.rs  backfill.rs  backoff.rs  classify.rs  client.rs  convert.rs  dotenv.rs  endpoint.rs  grpc.rs  history.rs  history_source.rs  http.rs  lib.rs  llm.rs  market.rs  orders.rs  rate.rs  rate_limit.rs  ratelimit.rs  resilience.rs  secret.rs  stream.rs
crates/data/src/moex/: client.rs  mod.rs  options.rs  parse.rs  source.rs
crates/data/tests/fixtures/moex/: README.md  candles_eq.json  futoi_fo.json  hi2_eq.json  obstats_eq.json  options_board.json  options_board_empty.json  orderstats_eq.json  tradestats_eq.json
crates/domain/: Cargo.toml
crates/domain/src/: calendar.rs  history.rs  lib.rs  model.rs
crates/domain/src/algo/: futoi.rs  hi2.rs  mega_alerts.rs  mod.rs  obstats.rs  orderstats.rs  tradestats.rs
crates/domain/src/backtest/: engine.rs  library.rs  mod.rs  report.rs  strategy.rs
crates/domain/src/delta/: footprint.rs  mod.rs  robots.rs
crates/domain/src/keyactivity/: mod.rs  prompt.rs
crates/domain/src/live/: alerts.rs  book.rs  mod.rs  replay.rs  tape.rs
crates/domain/src/metrics/: alerts.rs  breadth.rs  crossasset.rs  flow.rs  mod.rs  regime.rs  rrg.rs  sector.rs  turnover.rs
crates/domain/src/options/: mod.rs  pricing.rs  smile.rs  strategy.rs
crates/domain/src/trading/: account.rs  mod.rs  order.rs  risk.rs  sim.rs
crates/finam-proto/: Cargo.toml  build.rs
crates/finam-proto/proto/: VENDOR.md
crates/finam-proto/proto/google/type/: decimal.proto
crates/finam-proto/proto/grpc/tradeapi/v1/: side.proto
crates/finam-proto/proto/grpc/tradeapi/v1/assets/: assets_service.proto
crates/finam-proto/proto/grpc/tradeapi/v1/auth/: auth_service.proto
crates/finam-proto/proto/grpc/tradeapi/v1/marketdata/: marketdata_service.proto
crates/finam-proto/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: backfill.rs  config.rs  datadir.rs  db.rs  duck.rs  history.rs  ingest.rs  lib.rs  mem.rs  migrate.rs  query.rs  schema.rs  store.rs  timeframe.rs
crates/storage/tests/: storage_integration.rs
design/: Market_Terminal.dc.html  claude-design-brief.md
docs/: options-smile-models.html
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/design/: Market Flow Terminal.dc.html  README.md  roadmap_design.md
frontend/src/: App.svelte  app.css  main.ts
frontend/src/lib/: algoMock.ts  assetClass.test.ts  assetClass.ts  charts.ts  dock.ts  format.test.ts  format.ts  ipc.test.ts  ipc.ts  mock.ts  options.test.ts  settings.test.ts  settings.ts  store.svelte.ts  types.ts
frontend/src/lib/components/: AlertsPanel.svelte  BacktestPanel.svelte  Backtester.svelte  BondsTable.svelte  BreadthIndicator.svelte  CandleChart.svelte  DatasetManager.svelte  DeltaChart.svelte  DeltaView.svelte  DisbBars.svelte  DomLadder.svelte  EquityCurveChart.svelte  FlowSankey.svelte  FutoiChart.svelte  FuturesTreemap.svelte  HeatmapChart.svelte  Hi2Chart.svelte  HistoryTab.svelte  InstrumentList.svelte  KeyActivitySummary.svelte  KeyActivityTable.svelte  MoexAlgoTab.svelte  OptionCalculator.svelte  OptionsTab.svelte  OrderBook.svelte  Overview.svelte  Panel.svelte  PayoffChart.svelte  ReplayControls.svelte  RrgChart.svelte  SectorTreemap.svelte  SettingsPanel.svelte  SettingsTab.svelte  SharesDonut.svelte  SmileChart.svelte  SmileView.svelte  StrategyBuilder.svelte  SummaryPanel.svelte  SuperCandlesChart.svelte  TabBar.svelte  (+6 more)
frontend/src/lib/panels/: BreadthPanel.svelte  FlowPanel.svelte  HeatmapPanel.svelte  MoversPanel.svelte  RrgPanel.svelte  SectorPanel.svelte
