[workspace]
resolver = "2"
members = [
    "crates/finam-proto",
    "crates/domain",
    "crates/data",
    "crates/storage",
    "crates/app",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
authors = ["airwaves18244"]

[workspace.dependencies]
# Internal crates
finam-proto = { path = "crates/finam-proto" }
domain = { path = "crates/domain" }
data = { path = "crates/data" }
storage = { path = "crates/storage" }

# Shared third-party
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
duckdb = { version = "1", features = ["bundled"] }

[profile.release]
opt-level = 3
lto = "thin"
