[package]
name = "app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Tauri-приложение: оркестрация, команды, события, планировщик ингеста"

[[bin]]
name = "market-terminal"
path = "src/main.rs"

[dependencies]
domain = { workspace = true }
data = { workspace = true }
storage = { workspace = true }
finam-proto = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
# Подписчик tracing для бинаря: форматированный вывод, фильтр по RUST_LOG.
# Чистый Rust (без ОС-зависимостей) — собирается в кросс-платформенном CI.
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter", "ansi"] }

# UI-привязка Tauri. Выключена по умолчанию: её сборка требует десктопного
# окружения (на Linux — webkit2gtk), поэтому базовый кросс-платформенный CI
# собирает только ядро IPC (api/dto/state), которое тестируется на MemStore.
tauri = { version = "2", features = [], optional = true }

[build-dependencies]
# Нужен только при сборке с фичей `tauri` (генерация контекста из
# tauri.conf.json). Опциональный, чтобы не тянуться в обычной сборке.
tauri-build = { version = "2", optional = true }

[features]
default = []
tauri = ["dep:tauri", "dep:tauri-build"]
# Продакшен-хранилище: нативный DuckDB вместо MemStore.
duckdb = ["storage/duckdb"]
