[package]
name = "app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Tauri-приложение: оркестрация, команды, события, планировщик ингеста"

[[bin]]
name = "market-terminal"
path = "src/main.rs"

[dependencies]
domain = { workspace = true }
data = { workspace = true }
storage = { workspace = true }
finam-proto = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Async-runtime для планировщика ингеста (фича `ingest`). Выключен по умолчанию,
# чтобы базовый CI оставался лёгким (как `tauri`/`duckdb`).
tokio = { version = "1", optional = true, features = ["rt", "macros", "time"] }

# UI-привязка Tauri. Выключена по умолчанию: её сборка требует десктопного
# окружения (на Linux — webkit2gtk), поэтому базовый кросс-платформенный CI
# собирает только ядро IPC (api/dto/state), которое тестируется на MemStore.
tauri = { version = "2", features = [], optional = true }

[build-dependencies]
# Нужен только при сборке с фичей `tauri` (генерация контекста из
# tauri.conf.json). Опциональный, чтобы не тянуться в обычной сборке.
tauri-build = { version = "2", optional = true }

[features]
default = []
tauri = ["dep:tauri", "dep:tauri-build"]
# Продакшен-хранилище: нативный DuckDB вместо MemStore.
duckdb = ["storage/duckdb"]
# Асинхронный планировщик ингеста (poll рыночных данных в хранилище).
ingest = ["dep:tokio"]
# Хранение API-секрета в ОС-keyring (для live-режима).
keyring = ["data/keyring"]
# Боевой режим: live-подключение к Finam (gRPC) + ингест в хранилище.
live = ["ingest", "data/grpc"]
# Боевой роутинг заявок (каркас): включает заглушку `data::FinamOrderRouter`.
# По умолчанию торговля идёт через симулятор (`SimOrderRouter`).
live-trading = ["data/live-trading"]
