[package]
name = "app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Tauri-приложение: оркестрация, команды, события, планировщик ингеста"

[[bin]]
name = "market-terminal"
path = "src/main.rs"

[dependencies]
domain = { workspace = true }
data = { workspace = true }
storage = { workspace = true }
finam-proto = { workspace = true }
serde = { workspace = true }
# JSON-документ настроек (crate::settings) — тот же формат, в котором уже
# сериализуются правила Key Activity (domain::keyactivity), версия как у domain.
serde_json = "1"
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Async-runtime для планировщика ингеста (фича `ingest`). Выключен по умолчанию,
# чтобы базовый CI оставался лёгким (как `tauri`/`duckdb`).
tokio = { version = "1", optional = true, features = ["rt", "macros", "time"] }

# UI-привязка Tauri. Выключена по умолчанию: её сборка требует десктопного
# окружения (на Linux — webkit2gtk), поэтому базовый кросс-платформенный CI
# собирает только ядро IPC (api/dto/state), которое тестируется на MemStore.
tauri = { version = "2", features = [], optional = true }

[build-dependencies]
# Нужен только при сборке с фичей `tauri` (генерация контекста из
# tauri.conf.json). Опциональный, чтобы не тянуться в обычной сборке.
tauri-build = { version = "2", optional = true }

[features]
default = []
# UI-сборка тянет и загрузчик истории (T10): его async-оркестрация нужна
# командам `history_load`/`history_cancel`, поэтому `tauri` включает `ingest`
# (та же опциональная зависимость tokio, что у `ingest`/`moex`/`llm`).
tauri = ["dep:tauri", "dep:tauri-build", "ingest"]
# Продакшен-хранилище: нативный DuckDB вместо MemStore.
duckdb = ["storage/duckdb"]
# Асинхронный планировщик ингеста (poll рыночных данных в хранилище).
ingest = ["dep:tokio"]
# Хранение API-секрета в ОС-keyring (для live-режима и ключей LLM-провайдеров).
keyring = ["data/keyring"]
# Боевой режим: live-подключение к Finam (gRPC) + ингест в хранилище.
live = ["ingest", "data/grpc"]
# Живой LLM-провайдер для ИИ-резюме Key Activity (фаза 10.4). Async-runtime
# переиспользуется из фичи `ingest` (`dep:tokio` — та же опциональная зависимость).
llm = ["data/llm", "dep:tokio"]
# Контур MOEX поверх клиента `data::moex` + async-runtime (та же опциональная
# зависимость, что у `ingest`/`llm`). Включает одним флагом:
# — опционную доску через публичный ISS (фаза 12.4): DTO/обработчик/команда
#   `option_board` (без фичи — как без `llm`, команды нет);
# — ингест ALGOPACK (Super Candles/FUTOI/HI2) в планировщик (фаза 10.6.4) и
#   read-обработчики/команды датасетов (`algo_tradestats`/`algo_futoi`/
#   `algo_hi2`/`algo_mega_alerts`) — сами по себе сети не требуют, читают
#   уже персистентные таблицы T8, но живут вместе с планировщиком.
moex = ["data/moex", "dep:tokio"]
# Боевой роутинг заявок (каркас): включает заглушку `data::FinamOrderRouter`.
# По умолчанию торговля идёт через симулятор (`SimOrderRouter`).
live-trading = ["data/live-trading"]
