[package]
name = "data"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Адаптер Finam Trade API: auth+refresh, fetch, стримы, rate-limit, классификация"

[dependencies]
domain = { workspace = true }
finam-proto = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

# Rate-limit реализован нативно (см. `src/rate.rs`), без внешних зависимостей.
# Сетевой gRPC-клиент (tonic) и async-runtime (tokio) — за фичей `grpc`,
# выключенной в кросс-платформенном CI (как `duckdb`/`tauri`).
tonic = { version = "0.12", optional = true, features = ["tls", "tls-roots"] }
tokio = { version = "1", optional = true, features = ["rt", "rt-multi-thread", "macros", "time", "sync"] }

# ОС-keyring для секрета API — за фичей `keyring`, выключенной в кросс-
# платформенном CI (как `duckdb`/`tauri`). Бэкенд выбирается под платформу:
# Windows → Credential Manager, macOS → Keychain, Linux → ядро (keyutils).
[target.'cfg(windows)'.dependencies]
keyring = { version = "3", optional = true, default-features = false, features = ["windows-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", optional = true, default-features = false, features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", optional = true, default-features = false, features = ["linux-native"] }

[features]
# Боевое хранилище секрета поверх ОС-keyring (нативные платформенные бэкенды).
keyring = ["dep:keyring"]
# Сетевой gRPC-клиент Finam (auth-обмен поверх сгенерированных стабов).
grpc = ["dep:tonic", "dep:tokio", "finam-proto/grpc"]
