[package]
name = "data"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Адаптер Finam Trade API: auth+refresh, fetch, стримы, rate-limit, классификация"

[dependencies]
domain = { workspace = true }
finam-proto = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

# Rate-limit реализован нативно (см. `src/rate.rs`), без внешних зависимостей.
# Сетевой gRPC-клиент (tonic) и async-runtime (tokio) — за фичей `grpc`,
# выключенной в кросс-платформенном CI (как `duckdb`/`tauri`).
tonic = { version = "0.12", optional = true, features = ["tls", "tls-roots"] }
tokio = { version = "1", optional = true, features = ["rt", "rt-multi-thread", "macros", "time", "sync"] }
prost-types = { version = "0.13", optional = true }

# HTTP-клиент (MOEX ALGOPACK, LLM-провайдеры) — за фичей `http`, выключенной
# в кросс-платформенном CI (как `grpc`/`keyring`). TLS — rustls (без OpenSSL
# и его сборочных зависимостей), сжатие ответов — gzip; `json` даёт удобные
# хелперы поверх `reqwest::Response` (сам разбор ведём через `serde_json`,
# чтобы читать тело и у не-2xx ответов).
reqwest = { version = "0.12", optional = true, default-features = false, features = [
    "rustls-tls",
    "gzip",
    "json",
] }
serde_json = { version = "1", optional = true }

# ОС-keyring для секрета API — за фичей `keyring`, выключенной в кросс-
# платформенном CI (как `duckdb`/`tauri`). Бэкенд выбирается под платформу:
# Windows → Credential Manager, macOS → Keychain, Linux → ядро (keyutils).
[target.'cfg(windows)'.dependencies]
keyring = { version = "3", optional = true, default-features = false, features = ["windows-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", optional = true, default-features = false, features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", optional = true, default-features = false, features = ["linux-native"] }

[[example]]
name = "live_check"
required-features = ["grpc"]

[features]
# Боевое хранилище секрета поверх ОС-keyring (нативные платформенные бэкенды).
keyring = ["dep:keyring"]
# Сетевой gRPC-клиент Finam (auth-обмен + рыночные данные поверх стабов).
grpc = ["dep:tonic", "dep:tokio", "dep:prost-types", "finam-proto/grpc"]
# Транспорт REST/JSON (MOEX ALGOPACK, LLM-провайдеры) поверх `reqwest`.
# Async-runtime (`tokio`) переиспользуется из фичи `grpc` — здесь та же
# зависимость подключается независимо от неё.
http = ["dep:reqwest", "dep:tokio", "dep:serde_json"]
# LLM-провайдеры (OpenRouter/OpenAI/Anthropic) для живого ИИ-резюме Key Activity
# (фаза 10.4). Поверх транспорта `http` — своих сетевых зависимостей не тянет.
llm = ["http"]
# Боевой роутинг заявок в Finam (OrderService/AccountsService). Каркас: контракт
# `OrderRouter` есть всегда (с симулятором по умолчанию), а заглушка
# `FinamOrderRouter` компилируется только под этой фичей. Реальный транспорт
# (gRPC OrderService/AccountsService) подключается отдельно, поэтому фича
# по умолчанию выключена (как `grpc`/`keyring`).
live-trading = []
