[package]
name = "finam-proto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Сгенерированные gRPC-стабы Finam Trade API (tonic + prost из vendored .proto)"
build = "build.rs"

# Vendored .proto: репозиторий FinamWeb/finam-trade-api, коммит зафиксирован в
# proto/VENDOR.md. Код генерируется в build.rs через protox (чистый Rust, без
# системного protoc) + tonic-prost-build.
[dependencies]
tonic = { version = "0.14", default-features = false, features = [
    "codegen",
    "channel",
    "tls-ring",
] }
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"

[build-dependencies]
tonic-prost-build = "0.14"
prost-build = "0.14"
protox = "0.9"
