[package]
name = "storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Локальное аналитическое хранилище (DuckDB): схема, ингест, запросы"

[dependencies]
domain = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

# Нативный движок DuckDB (bundled = компиляция из исходников). Выключен по
# умолчанию, чтобы базовая сборка и кросс-платформенный CI не тянули C++-движок;
# включается фичей `duckdb` (продакшен-сборка терминала, см. crate `app`).
duckdb = { version = "1", features = ["bundled"], optional = true }

[features]
default = []
duckdb = ["dep:duckdb"]
